<resources>
    <string name="app_name">DocAndroid</string>
    <string name="commone">公共属性</string>
    <string name="tab_layout">布局</string>
    <string name="tab_widget">组件</string>
    <string name="lin_desc">线性布局（LinearLayout）主要以水平或垂直方式来排列界面中的控件。并将控件排列到一条直线上。在线性布局中，如果水平排列，垂直方向上只能放一个控件，如果垂直排列，水平方向上也只能方一个控件。</string>
    <string name="lin_orientation">orientation属性</string>
    <string name="lin_gravity">gravity属性</string>
    <string name="lin_layout_weight">layout_weight属性</string>
    <string name="lin_gravity_desc">线性布局的控件默认是从左往右排列或从上往下排列，如果想让线性布局中的控件排列对齐右边缘或者底部，可以用gravity属性控制。</string>
    <string name="lin_layout_weight_desc">LinearLayout中另外一个常用的属性是layout_weight，该属性需要加在LinearLayout的子控件中。其作用是分配线性布局中的剩余空间到该控件上。</string>
    <string name="lin_w1_b2">给控件2加上android:layout_weight="1"后，会把线性布局剩余空间全部占满。</string>
    <string name="lin_w1_b1b2">如果给button1和button2都加上android:layout_weight="1"，则两个控件均匀分配剩余空间。</string>
    <string name="lin_w3_b1_w2_b2">如果给button1加上android:layout_weight="3"，button2加上android:layout_weight="1"，由于剩余的空间是200，button1和button2会按照3:1的比例来分配剩余空间。</string>
    <string name="lin_h">horizonal</string>
    <string name="lin_v">vertical</string>
    <string name="rela_desc">相对布局可以设置某一个视图相对于其他视图的位置，即是以其他控件或父容器为参照物设置位置的。</string>
    <string name="frame_desc">帧布局用于在屏幕上创建一块空白区域，添加到该区域中的每个子控件占一帧，这些帧会一个一个叠加在一起，后加入的控件会叠加在上一个控件上层。因此也可以将FrameLayout称为堆栈布局，或框架布局。</string>
    <string name="constraintlayout_desc"> 约束布局是Android Studio2.2新添加的布局。 它适合使用可视化的方式编写界面布局，优点是减少嵌套，优化布局，可以直接拖拽的方式布局；缺点也显而易见，修改的时候容易错乱，代码可读性变差。</string>
    <string name="grid_desc">网格布局是Android4.0新增的布局，它实现了控件的交错显示，能够避免因布局嵌套对设备性能的影响，更利于自由布局的开发。 网格布局用一组无限细的直线将绘图区域分成行、列和单元，并指定控件的显示区域和控件在该区域的显示方式</string>
    <string name="table_desc">表格布局将子元素的位置分配到行或列中，与网格布局不同的是，它不需要明确多少行、多少列。一个TableLayout由许多TableRow组成，每个TableRow都会定义一个Row。</string>

</resources>